@@ -1,2 +1,2 @@
 #
-__version__ = '2.6.3.dev'
+__version__ = '2.6.3.dev3'
